# walksnail-osd-tool

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: build.yaml  ci.yaml  release.yaml
_deploy/windows/wix/: main.wxs
backend/: Cargo.toml
backend/src/: config.rs  lib.rs  util.rs
backend/src/ffmpeg/: dependencies.rs  encoders.rs  error.rs  mod.rs  render.rs  render_settings.rs  video_info.rs
backend/src/font/: character_size.rs  dimensions.rs  error.rs  font_file.rs  mcm_reader.rs  mod.rs
backend/src/osd/: error.rs  frame.rs  mod.rs  options.rs  osd_file.rs
backend/src/overlay/: iter.rs  mod.rs  osd.rs  srt.rs
backend/src/srt/: error.rs  frame.rs  mod.rs  options.rs  srt_file.rs
resources/icons/: create_icon_pngs.sh
resources/release/wix/: main.wxs
src/: config.rs  main.rs  util.rs
src/ffmpeg/: dependencies.rs  encoder_settings.rs  encoders.rs  error.rs  message.rs  mod.rs  render.rs  render_settings.rs  video_info.rs
src/font/: character_size.rs  error.rs  font_file.rs
src/osd/: error.rs  fc_firmware.rs  frame.rs  glyph.rs  mod.rs  osd_file.rs  preview.rs
src/overlay/: frame_overlay_iter.rs  image.rs  iter.rs  mod.rs  osd.rs  srt.rs  video_frame.rs
src/srt/: frame.rs  mod.rs  srt_file.rs
src/ui/: app.rs  bottom_panel.rs  central_panel.rs  mod.rs  osd_preview.rs  render_status.rs  side_panel.rs  top_panel.rs  utils.rs
src/video/: error.rs  frame_overlay_iter.rs  mod.rs  process.rs  render_progress.rs  settings.rs
tools/: Inav OSD tool.py
ui/: Cargo.toml  build.rs
ui/src/: app.rs  bottom_panel.rs  central_panel.rs  main.rs  osd_preview.rs  render_status.rs  side_panel.rs  top_panel.rs  util.rs
wix/: main.wxs
