[package]
name = "walksnail-osd-overlay-tool"
version = "0.1.0"
edition = "2021"
description = "Cross-platform tool for overlaying the Walksnail Avatar Goggle and VRX OSD recording on top of the video recording."
authors = ["Alexander van Saase <avsaase <at> gmail.com>"]
keywords = ["Walksnail Avatar", "FPV", "Video"]
repository = "https://github.com/avsaase/walksnail-osd-tool"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
egui_extras = { version = "0.21.0", features = ["image"] }
ffmpeg-sidecar = "0.2.1"
ffprobe = { git = "https://github.com/avsaase/ffprobe-rs/", branch = "suppress-console-windows"}
image = "0.24.5"
indoc = "2.0.0"
itertools = "0.10.5"
rayon = "1.6.1"
rfd = "0.11.1"
thiserror = "1.0.38"

# Use local version of eguis and friends
# eframe = { path = "../egui/crates/eframe" }
# egui = { path = "../egui/crates/egui" }
# egui_extras = { path = "../egui/crates/egui_extras", features = ["image"] }
