[package]
name = "walksnail-osd-tool"
version = "0.1.0"
edition = "2021"
description = "Cross-platform tool for overlaying the Walksnail Avatar Goggle and VRX OSD recording on top of the video recording."
authors = ["Alexander van Saase"]
keywords = ["Walksnail Avatar", "FPV", "Video"]
repository = "https://github.com/avsaase/walksnail-osd-tool"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
derivative = "2.2.0"
directories = "4.0.1"
eframe = "0.21.3"
egui = "0.21.0"
egui_extras = { version = "0.21.0", features = ["image"] }
ffmpeg-sidecar = "0.2.1"
ffprobe = { git = "https://github.com/avsaase/ffprobe-rs/", branch = "suppress-console-windows" }
image = "0.24.5"
itertools = "0.10.5"
rayon = "1.6.1"
rfd = "0.11.1"
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-appender = { version = "0.2.2", default-features = false }
tracing-subscriber = "0.3.16"

# Use local version of eguis and friends
# eframe = { path = "../egui/crates/eframe" }
# egui = { path = "../egui/crates/egui" }
# egui_extras = { path = "../egui/crates/egui_extras", features = ["image"] }

[build-dependencies]
built = { version = "0.6.0", features = ["git2"] }
image = "0.24.5"

[features]
macos-app-bundle = []
windows-installer = []

[package.metadata.bundle]
name = "Walksnail OSD Tool"
identifier = "org.avsaase.walksnail-osd-tool"
icon = [
    "_deploy/icons/16x16.png",
    "_deploy/icons/32x32.png",
    "_deploy/icons/32x32@2x.png",
    "_deploy/icons/64x64@2x.png",
    "_deploy/icons/128x128.png",
    "_deploy/icons/256x256.png",
    "_deploy/icons/256x256@2x.png",
    "_deploy/icons/512x512.png",
    "_deploy/icons/512x512@2x.png",
    "_deploy/icons/1024x1024@2x.png",
]
