[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
confy = { version = "0.5.1", features = ["ron_conf"], default-features = false }
crossbeam-channel = "0.5.7"
derivative = "2.2.0"
ffmpeg-sidecar = "0.3.2"
ffprobe = { git = "https://github.com/avsaase/ffprobe-rs/", branch = "suppress-console-windows" }
image = "0.24.5"
imageproc = "0.23.0"
parse-display = "0.8.0"
rayon = "1.6.1"
rusttype = "0.9.3"
serde = { version = "1.0.159", features = ["derive"] }
srtparse = "0.2.0"
thiserror = "1.0.38"
tracing = "0.1.37"

[dev-dependencies]
claims = "0.7.1"
